RESOLVED FIXED201306
Copying and pasting two paragraphs with a newline between them results in stray paragraph with newline inside
https://bugs.webkit.org/show_bug.cgi?id=201306
Summary Copying and pasting two paragraphs with a newline between them results in str...
Timothy Hatcher
Reported 2019-08-29 12:07:05 PDT
Select all, copy and paste: <p>Line One</p>\n<p>Line Two</p> Result: <p>Line One</p><p>\n</p><p>Line Two</p>
Attachments
Patch (4.62 KB, patch)
2019-08-29 12:11 PDT, Timothy Hatcher
no flags
Patch (4.60 KB, patch)
2019-08-29 12:15 PDT, Timothy Hatcher
no flags
Patch (5.56 KB, patch)
2019-08-29 13:36 PDT, Timothy Hatcher
no flags
Timothy Hatcher
Comment 1 2019-08-29 12:11:49 PDT Comment hidden (obsolete)
Timothy Hatcher
Comment 2 2019-08-29 12:14:44 PDT Comment hidden (obsolete)
Timothy Hatcher
Comment 3 2019-08-29 12:15:29 PDT Comment hidden (obsolete)
Wenson Hsieh
Comment 4 2019-08-29 12:31:13 PDT
Comment on attachment 377605 [details] Patch r=mews
Timothy Hatcher
Comment 5 2019-08-29 13:36:17 PDT
WebKit Commit Bot
Comment 6 2019-08-29 18:41:05 PDT
Comment on attachment 377621 [details] Patch Clearing flags on attachment: 377621 Committed r249307: <https://trac.webkit.org/changeset/249307>
WebKit Commit Bot
Comment 7 2019-08-29 18:41:07 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 8 2019-08-29 18:42:19 PDT
Note You need to log in before you can comment on or make changes to this bug.