Copying and pasting two paragraphs with a newline between them results in stray paragraph with newline inside. https://bugs.webkit.org/show_bug.cgi?id=201306

Reviewed by Wenson Hsieh.

Source/WebCore:

Test: editing/pasteboard/paste-without-nesting.html

* editing/ReplaceSelectionCommand.cpp:
(WebCore::ReplaceSelectionCommand::moveNodeOutOfAncestor): Consider the ancestor node safe to remove
if there is no rendered text inside, not just if there are any child nodes.

LayoutTests:

* editing/pasteboard/paste-without-nesting-expected.txt: Updated results.
* editing/pasteboard/paste-without-nesting.html: Added new test case.


Canonical link: https://commits.webkit.org/214977@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@249307 268f45cc-cd09-0410-ab3c-d52691b4dbfc